--- a/user/.config/waybar/style.css
+++ b/user/.config/waybar/style.css
@@ -1,46 +1,97 @@
-@import 'mocha.css';
-
 * {
-  color: @text;
+	border: none;
+	border-radius: 11px;
+	font-family: "CaskaydiaCove Nerd Font" ;
+	font-size: 16px;
+	min-height: 10px;
 }
 
 window#waybar {
-    background-color: rgba(0,0,0,.3);
+	background: transparent;
 }
 
-#custom-separator {
-  color: @pink;
-  margin: 0 1px;
+window#waybar.hidden {
+	opacity: 0.2;
+}
+
+#window {
+	padding-left: 10px;
+	padding-right: 10px;
+	border-radius: 10px;
+	transition: none;
+	color: transparent;
+	background: transparent;
+}
+#workspaces {
+	margin-left: 5px;
+	font-size: 4px;
+	margin-bottom: 0px;
+	border-radius: 10px;
+	background: #171717;
+	transition: none;
 }
 
 #workspaces button {
-    padding: 0 5px;
+	transition: none;
+	color: #fefefe;
+	background: transparent;
+	font-size: 16px;
+	border-radius: 11px;
 }
 
-#workspaces button.focused {
-    background-color: @lavender;
-    color: @crust;
-    border-bottom: 3px solid white;
+#workspaces button.occupied {
+	transition: none;
+	background: transparent;
+	font-size: 4px;
 }
 
 #workspaces button.active {
-    color: @lavender;
-    border-bottom: 1px solid white;
+	background: #fefefe;
+	color: #171717;
+}
+
+#workspaces button:hover {
+	color: #8e8e8e;
+	transition: none;
+	box-shadow: inherit;
+	text-shadow: inherit;
+}
+
+#backlight, #clock, #memory, #cpu, #tray, #network, #pulseaudio, #battery, #language {
+	margin-left: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-bottom: 0px;
+	border-radius: 10px;
+	transition: none;
+	color: #fefefe;
+	background: #171717;
+}
+
+#clock {
+	padding-left: 10px;
+	padding-right: 10px;
+	transition: none;
+	color: #fefefe;
+	/* background-color: rgba(0,0,0,0); */
+}
+#tray, #language {
+	margin-right: 5px;
+}
+
+
+#battery.critical:not(.charging) {
+	color: #161320;
+	animation-name: blink;
+	animation-duration: 0.5s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
 }
 
 @keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: black;
-    }
+to {
+	background-color: #BF616A;
+	color: #B5E8E0;
 }
-
-#battery.warning:not(.charging) {
-    background: #f53c3c;
-    color: white;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: steps(12);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
 }
